--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-dotenv==1.0.0
-httpx==0.25.2
-sqlalchemy==2.0.23
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+python-dotenv==1.0.1
+
+# DB stack (common)
+SQLAlchemy==2.0.32
 psycopg2-binary==2.9.9
-pydantic==2.5.0
+
+# OpenAI SDK (new)
+openai==1.40.6
