--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-python-dotenv==1.0.1
 
-# DB stack (common)
-SQLAlchemy==2.0.32
+# Postgres drivers (pick one approach; keeping both is fine if you're unsure)
 psycopg2-binary==2.9.9
+asyncpg==0.29.0
 
-# OpenAI SDK (new)
-openai==1.40.6
+python-dotenv==1.0.1
