--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 
-# Postgres drivers (pick one approach; keeping both is fine if you're unsure)
-psycopg2-binary==2.9.9
+SQLAlchemy==2.0.36
 asyncpg==0.29.0
 
 python-dotenv==1.0.1
+openai==1.57.0
