--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-
-SQLAlchemy==2.0.36
-asyncpg==0.29.0
-
-python-dotenv==1.0.1
-openai==1.57.0
+fastapi
+uvicorn[standard]
+SQLAlchemy>=2.0
+psycopg2-binary>=2.9
+python-dotenv
