--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-fastapi
-uvicorn[standard]
-SQLAlchemy>=2.0
-psycopg2-binary>=2.9
-python-dotenv
+# Core framework
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+
+# Database
+SQLAlchemy==2.0.25
+psycopg2-binary==2.9.9
+
+# Environment management
+python-dotenv==1.0.0
+
+# Optional but recommended for production
+pydantic==2.5.3
+pydantic-settings==2.1.0
+
