--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-# Core framework
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
+# Railway Configuration (Optional)
+# This file provides Railway-specific settings
+# Railway works without this file, but you can use it to customize behavior
 
-# Database
-SQLAlchemy==2.0.25
-psycopg2-binary==2.9.9
+[build]
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile"
 
-# Environment management
-python-dotenv==1.0.0
+[deploy]
+startCommand = ""  # Leave empty - let Dockerfile CMD handle it
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 3
 
-# Optional but recommended for production
-pydantic==2.5.3
-pydantic-settings==2.1.0
-
+# Health check configuration
+healthcheckPath = "/health"
+healthcheckTimeout = 100
