--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ python-dotenv==1.0.0
 
 # Optional but recommended for production
 pydantic==2.5.3
+email-validator==2.1.0
 pydantic-settings==2.1.0
 
