--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,6 @@
-# Core framework
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-
-# Template support (for admin dashboard)
-jinja2==3.1.3
-
-# Database
-SQLAlchemy==2.0.25
-psycopg2-binary==2.9.9
-
-# Environment management
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
 python-dotenv==1.0.0
-
-# Optional but recommended for production
-pydantic==2.5.3
-email-validator==2.1.0
-pydantic-settings==2.1.0
-
+openai==1.3.0
+python-multipart==0.0.6
